# cognito-emulator

./: .flake8  .gitignore  LICENSE  README.md  alembic.ini  mypy.ini  pyproject.toml  seed.py  shell.py  utilities.py
cognito_emulator/: auth.py  db.py  endpoints.py  executor.py  middlewares.py  models.py
cognito_emulator/alembic/: __init__.py  env.py
cognito_emulator/alembic/versions/: cb265a77496e_.py  cb80d9d5787a_.py
cognito_emulator/identitypool/: __init__.py  application.py  asgi.py  models.py
cognito_emulator/identitypool/templates/: index.html
cognito_emulator/identitypool/templates/_layouts/: _admin_base.html
cognito_emulator/identitypool/templates/admin/: index.html
cognito_emulator/identitypool/views/: admin.py  endpoint.py  index.py
cognito_emulator/static/css/: overrides.css
cognito_emulator/templates/: _base.html
cognito_emulator/templates/_layouts/: _admin_base.html
cognito_emulator/templates/_typesystem/forms/: array_of_inputs.html  array_of_selects.html  checkbox.html  input.html  select.html  textarea.html
cognito_emulator/tests/: test_endpoints.py  test_utils.py
cognito_emulator/userpool/: application.py  asgi.py  exceptions.py  models.py  oidc.py  types.py  utils.py
cognito_emulator/userpool/templates/: _base.html  _typesystem  index.html  logout.html
cognito_emulator/userpool/tests/: conftest.py  test_views.py
cognito_emulator/userpool/views/: admin.py  endpoint.py  index.py  oauth2.py  pools.py
cognito_emulator/utils/: __init__.py  enum.py  idgen.py  starlette.py  time.py  typesystem.py
seeds/: userpools.yaml
(+26 files in other folders)
